fix icons on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -326,16 +326,11 @@ project
 
 .down-content {
   padding: 10px 40px 30px 40px;
-  min-height: 360px;
+  /* min-height: 360px; */
 }
 
 .social-icons .single-img {
   width: 30px;
-}
-
-.social-icons {
-  position: absolute;
-  bottom: 30px;
 }
 
 .down-content ul li {
@@ -347,7 +342,6 @@ project
   background-color: #fff;
   box-shadow: 0px 0px 8px rgba(38, 39, 54, 0.157);
   margin-bottom: 60px;
-  position: relative;
   transition: all 0.2s ease-in-out;
   border-radius: 10px;
   border: 2px solid #fff;
@@ -356,7 +350,7 @@ project
 
 #project .project-item:hover {
   border-color: #ed3b76;
-  transform: scale(1.05);
+  transform: scale(1.02);
 }
 
 #project .project-item img {
@@ -448,6 +442,7 @@ responsive
 */
 
 @media (max-width: 992px) {
+
 
   #bg {
     background-position-x: 70%;
